--- a/app/views/file_infos/_template_download.html.erb
+++ b/app/views/file_infos/_template_download.html.erb
@@ -4,7 +4,7 @@
 <script id="template-download" type="text/x-tmpl">
 	{% if (o.files.length==0) { %}
 		<tr class="template-download fade" >
-		<td colspan="8"><h4 class="text-center">尚無檔案!</h4></td>
+		<td class="no-files-yet"colspan="8"><h4 class="text-center">尚無檔案!</h4></td>
 		</tr>
 	{% } %}
 	
@@ -18,6 +18,7 @@
 	<td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
 	{% } else { %}
 	
+	<td class="download_times">{%= file.download_times %} </td>
 	
 
 	<td class="semester_{%=file.id%}"><span>
@@ -28,7 +29,7 @@
 	</td>
 	<td class="name">
 	<% if current_user %>
-	  <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
+	  <a href="{%=file.url%}" onclick="add_count({%=file.id%});" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
 	<% else %>
 	  <a href="javascript: void(0)" title="{%=file.name%}" onclick='window.alert("請先登入!");'>{%=file.name%}</a>
 	<% end %>
