--- a/app/views/courses/course_content_head.html.erb
+++ b/app/views/courses/course_content_head.html.erb
@@ -45,4 +45,5 @@
 <%end%>      	       	
       	</div> 
       	
-<% end %>      	
+<% end %>      	</br></br>
+<%=fa_icon "eye"%> 點名頻率： <span class="label label-<%=j rollcall_color(@page.course_rollcall)%>" style="font-size:16px"><%=rollcall_name(@page.course_rollcall)%></span>	
