--- a/app/views/courses/course_content_list.html.erb
+++ b/app/views/courses/course_content_list.html.erb
@@ -7,6 +7,7 @@
 			<span class="col-sm-6"><%=c.content%></span>
 			<span class="col-sm-4"><%=c.created_at.strftime('%Y/%m/%d %H:%M')%> <%=c.user.name%></span>
 			<span class="col-sm-2" id="rank_span_<%=j c.id.to_s%>">
+<%if current_user%>			
 			<% if ContentListRank.where(:user_id=>current_user.id, :course_content_list_id=>c.id).first.presence %>
 				<i class="fa fa-thumbs-o-up"></i> 
 				<span style="color: green ;"><%=c.content_list_ranks.where(:rank=>1).count.to_s%></span>
@@ -20,7 +21,7 @@
 				<i class="fa fa-thumbs-o-down clickable-hover" onclick="return preferClick(2,<%=j c.id.to_s%>);"></i> 
 				<span style="color: red ;"><%=c.content_list_ranks.where(:rank=>2).count.to_s%></span>
 			<% end %>
-				
+<% end %>				
 			</span>
 		</td>
 	</tr>
