--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -309,7 +309,7 @@
 			'<td style="display: none;"><span class="col-sm-6"></span><span class="col-sm-4"></span>'+
 			'<span class="col-sm-2">'+
 			"<div class=\"btn btn-success btn-circle\" name=\"button\" onclick=\"return EditOld($(this).parent('span').parent('td'));\"><i class=\"fa fa-pencil\"></i></div> "+
-			'<div class="btn btn-danger btn-circle" name="button" onclick="DelOld();"><i class="fa fa-trash-o"></i></div>'+
+			'<div class="btn btn-danger btn-circle" name="button" onclick="return Del($(this));"><i class="fa fa-trash-o"></i></div>'+
 			'</span>'+
 			'</td>'+
 			'<td><select class="form-control" id="content_list_type" name="content_list_type">'+
@@ -375,6 +375,28 @@
 			'</span>'+
 			'</td>'
 		);
+		
+		return false ;
+	}
+	
+	function Del(thisdiv){
+		if(!confirm("確定要刪除嗎？"))
+			return false ;
+		var tr = thisdiv.parent('span').parent('td').parent('tr') ;
+		$.ajax({
+			type: "POST",
+			dataType: "script",
+  			url: "/courses/course_content_post" ,
+  			data:{
+  				post_type: 1,
+  				id: tr.attr('id') ,
+  				del: 1,
+  				ct_id : <%=j courseTeacher.id.to_s %>
+  			},
+  			success: function(){
+  				$('#toggle-msg-list').addClass('text-color-green').html('刪除成功').show().fadeOut(4000);
+  			}
+		});
 		
 		return false ;
 	}
