--- a/app/views/courses/content_list_form.html.erb
+++ b/app/views/courses/content_list_form.html.erb
@@ -11,7 +11,7 @@
 							<span class="col-sm-2">
 								<% if current_user.id == c.user_id %>
 									<div class="btn btn-success btn-circle" name="button" onclick="return EditOld($(this).parent('span').parent('td'));"><i class="fa fa-pencil"></i></div>
-									<div class="btn btn-danger btn-circle" name="button" onclick="DelOld();"><i class="fa fa-trash-o"></i></div>
+									<div class="btn btn-danger btn-circle" name="button" onclick="return Del($(this));"><i class="fa fa-trash-o"></i></div>
 								<%end %>
 							</span>
 						</td>
