--- a/app/views/courses/special_list.html.erb
+++ b/app/views/courses/special_list.html.erb
@@ -12,112 +12,18 @@
 		}
 	}
 </script>
-
-<div class="panel panel-primary">
-	<div class="panel-heading" >
-		<h4 class="text-center"><%=latest_semester.name%></h4>
-	</div>
-	
-
-
-<table class="table table-hover ">
-	<tr class="row">
-	
-		<!--<td colspan="2" class="col-md-12">
-		
-			
-			
-			<h4 id="user_info">
-				<% unless current_user.department.nil? %>
-				<%=current_user.department.ch_name%> <%=current_user.grade.name%> <%=current_user.name %>
-				
-				<button class="btn btn-success" onclick="show_form();">修改</button>
-				<% end %>
-			</h4>
-			
-		
-		</td>-->
-		<td  class="col-md-8">
-			<%= render :partial=> "/user/dept_form"%>
-			<h4 id="user_info" class="text-center">
-				<% unless current_user.department.nil? %>
-				<%=current_user.department.ch_name%> <%=current_user.grade.name%> <%=current_user.name %>
-				
-				
-				<% end %>
-			</h4>
-		</td>
-		<td class="col-md-4"><% unless current_user.department.nil? %>
-			<button class="btn btn-success" onclick="show_form($(this));">修改系級</button>
-			<% end %>
-			<%=link_to "/courses/simulation", class:"btn btn-primary" do %>
-				<%=fa_icon "plus" %>新增課程
-			<% end %>
-			
-		</td>
-	</tr>
-	<% cos_types=[] %>
-	<% credits=[] %>
-	<% @cd_this_mixed.each do |cd,course,teacher|%>
-		<% if !cos_types.include?(cd.cos_type) %>
-			<% cos_types.append(cd.cos_type) %>
-			<tr class="row"><th colspan="3" class="<%=cos_type_class(cd.cos_type)%>"><%=cd.cos_type%></th></tr>
-			<% credits.append(cd.credit.to_i) %>
-		<% else %>
-			<% credits[credits.length-1]+=cd.credit.to_i %>
-		<% end %>
-	
-	
-	<tr class="row ">
-	<td class="col-md-6">
-		<h4 class="text-center"><%= link_to course.ch_name, course_path(course, :tid=>teacher.id) %>
-			<%= link_to cd.temp_cos_id, "https://cos.adm.nctu.edu.tw/Course/CrsOutline/show.asp?Acy="<<cd.semester.year<<"&Sem="<<cd.semester.half<<"&CrsNo="<<cd.temp_cos_id, :target=>"_blank" %> | 
-			
-			<%=teacher.name %> | 
-			<%= fa_icon "user" %> <strong><%=CourseSimulation.where(:course_detail_id=>cd.id).count%></strong> | 
-			<%= fa_icon "graduation-cap" %> <strong><%=cd.credit%></strong>
-			</h4>
-		</td>
-		<td class="col-md-6">
-		<div class="container" style="display:inline-block;">
-			
-			<%= link_to "考古題", course_path(course, :tid=>teacher.id, :first_show=>"files"), :class=>"btn btn-sm btn-default" %>
-			<div class="number-right-top" ><%=cd.course_teachership.file_infos.count%></div>
-			<%= link_to "討論區", course_path(course, :tid=>teacher.id, :first_show=>"discussion"), :class=>"btn btn-sm btn-default" %>
-			<%ct=CourseTeachership.where(:course_id=>course.id, :teacher_id=>teacher.id).take%>
-			<div class="number-right-top" ><%=ct.discusses.count%></div>
+<div class="tabbable tabs-top">
+	<ul class="nav nav-tabs" style="/*margin-top:-15px;*/">
+		<li class="active"><a href="#a" data-toggle="tab" >今年</a></li>
+		<li><a href="#b" data-toggle="tab">統計</a></li>
+	</ul>
+	<br>
+	<div class="tab-content" style="overflow:hidden;">
+		<div class="tab-pane active" id="a">
+			<%= render :partial =>"/user/this_semester" %>
 		</div>
-
-		</td>
-	</tr>
-	<% end %>
-	<tr class="row">
-		<td colspan="2">
-			<h4 class="text-righ">
-				<%cos_all=cos_types.zip(credits)%>
-				<% cos_all.each do |t,c| %>
-					<%= t %> : <strong><%=c%></strong>		
-				<% end %>
-				共 <strong><%= @cd_this.count %></strong> 門課 <strong><%=@cd_this.sum(:credit) %></strong> 學分
-			</h4>
-		</td>
-	</tr>
-	<tr class="row success">
-		<td colspan="2" class="info">
-			<h4 class="text-right">
-			
-				目前學分: <strong><%=@cd_all_sum%></strong>
-				<% @cd_all_cos_type_credit.each do |type,credit| %>
-					<%=type%> : <strong><%=credit.round%></strong>
-				<% end %>
-				<!--必修 : <strong>53</strong> 選修 : <strong>51</strong>-->
-				<% unless current_user.department.nil? %>
-				離畢業還差 <strong><%=current_user.department.credit-@cd_all_sum%></strong> 學分
-				<% end %>
-			</h4>
-		</td>
-	</tr>
-</table>
-
+		<div class="tab-pane" id="b">
+			<%= render :partial =>"/user/statics" %>
+		</div>
+	</div>
 </div>
-
