--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -18,7 +18,7 @@
 			<%= fa_icon "shopping-cart 1x"%><sup><%= fa_icon "plus 1x"%></sup>
 			</button>
 			&nbsp;
-			<button class="btn btn-md btn-success masterTooltip" style="height:33px;margin-top:-1px" title="加選!">
+			<button class="btn btn-md btn-success masterTooltip" style="height:33px;margin-top:-1px" title="加選!" onclick="alert('Not done yet');">
 			<%= fa_icon "calendar 1x"%><sup><%= fa_icon "plus 1x"%></sup>
 			</button>
 			&nbsp;
