--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -8,7 +8,7 @@
 		<li id="sem_<%=s.id%>"  class="sem_tab"><a href="javascript:void(0);" onclick="change_sem(<%=s.id%>);"><%=s.name%></a></li>
 	<% end %>
 	<li class="" id="add_sem"><a href="javascript:void(0);" onclick="show_add_form()">新增學期</a></li>
-	<li class="" id="show_statics"><a href="javascript:void(0);" onclick="show_statics()">統計</a></li>
+	<!--<li class="" id="show_statics"><a href="javascript:void(0);" onclick="show_statics()">統計</a></li>-->
 	<!--<span class="glyphicon glyphicon-question-sign clickable-hover pull-right" style="color:green !important; "onclick="show_tip('simulation_tips')"></span>-->
 </ul>
 
